# MoKa-Web

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  awesome.json  moka_articles.rss  profiling.py  roadmap.toml
.github/workflows/: devskim.yml  docker-deploy.yml  docker-image.yml  rust-clippy.yml
assets/: prism.css  site.webmanifest  style.css
profiling_reports/: 08132023.html  2023-08-18.html
src/: article.rs  cheatsheet.rs  db.rs  dir.rs  downloader.rs  guide.rs  handles.rs  main.rs  page.rs  resources.rs  roadmap.rs
src/resources/: articles.rs  cheatsheet.rs  howtoguide.rs
templates/: analytics.html.tera  article.html.tera  articles_home.html.tera  awesome.html.tera  cheatsheet.html.tera  cheatsheet_home.html.tera  downloader.html.tera  footer.html.tera  header.html.tera  howtoguide.html.tera  index.html.tera  license.html.tera  license_home.html.tera  mission.html.tera  nav.html.tera  policies.html.tera  research.html.tera  search_results.html.tera  style.html.tera  zoho.html.tera
templates/courses/: kot101.html.tera
templates/licenses/: cc-nd.html.tera  cc-sa.html.tera  gplv2.html.tera  mit.html.tera
test_designs/: home.html
