[package]
name = "moka-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
walkdir = "2.3.3"
