[package]
name = "moka-web"
version = "0.3.0"
edition = "2021"
authors = ["Mustafif Khan <mustafif0929@gmail.com>", "MoKa Reads <moka.reads@mkproj.com>"]
description = "Moka Reads Web Application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
walkdir = "2.3.3"
mokareads-core = {git = "https://github.com/Moka-Reads/MokaReads-Core"}
serde_json = "1.0.104"
lazy_static = "1.4.0"
chrono = "0.4.26"