[package]
name = "moka-web"
version = "1.0.0-beta.3"
edition = "2021"
authors = ["Mustafif Khan <mustafif0929@gmail.com>", "MoKa Reads <help@mokareads.org>"]
description = "Moka Reads Web Application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8.8"
walkdir = "2.3.3"
mokareads-core = {git = "https://github.com/Moka-Reads/MokaReads-Core"}
serde_json = "1.0.104"
lazy_static = "1.4.0"
chrono = "0.4.26"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json"] }
markdown = "0.3.0"
rocket_async_compression = "0.5.1"
flate2 = "1.0.28"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # Enables link time optimizations to optimize at link-stage 
codegen-units = 1 # allows for maximum size reduction optimizations 
panic = "abort" # reduces size of panic unwind backtrace 
